@@ -1,7 +1,0 @@
-Makefile
-Makefile.in
-*.o
-*.lo
-libmoniker_extra_2.so
-Bonobo_Moniker_extra.server
-Bonobo_Moniker_extra.server.in
