@@ -1,3 +1,9 @@
+2002-01-09  Michael Meeks  <michael@ximian.com>
+
+	* Makefile.am: remove monikers.
+
+	* monikers/: remove, in libgnome now.
+
 2002-01-08  Paolo Maggi  <maggi@athena.polito.it>
 
 	* bonobo/bonobo-file-selector-util.c: gtkeditable.h #included
